testing/tests/ui/let_destructuring_has_rest.stderr
error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
       failed to parse template source at row 2, column 20 near:
       ", } = x -%}hello {{ a }}{%- endif -%}\n"
 --> tests/ui/let_destructuring_has_rest.rs:8:10
  |
8 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `,` for more members, or `}` as terminator
       failed to parse template source at row 2, column 17 near:
       ".. } = x -%}hello {{ a }}{%- endif -%}\n"
  --> tests/ui/let_destructuring_has_rest.rs:16:10
   |
16 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected member, or `}` as terminator
       failed to parse template source at row 2, column 18 near:
       "1 } = x -%}hello {{ a }}{%- endif -%}\n"
  --> tests/ui/let_destructuring_has_rest.rs:24:10
   |
24 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
       failed to parse template source at row 2, column 20 near:
       ", b } = x -%}hello {{ a }}{%- endif -%}\n"
  --> tests/ui/let_destructuring_has_rest.rs:32:10
   |
32 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
       failed to parse template source at row 2, column 17 near:
       ", b } = x -%}hello {{ a }}{%- endif -%}\n"
  --> tests/ui/let_destructuring_has_rest.rs:40:10
   |
40 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
